--- a/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
+++ b/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
@@ -15,7 +15,7 @@
         <thead>
         <tr>
             <th>
-                Name 
+                Name
             </th>
             <th>
                 Occupany
@@ -34,10 +34,12 @@
                 <td>@item.Occupancy</td>
                 <td>@((item.Rate).ToString("c"))</td>
                 <td>
-                    <a asp-controller="Villa" asp-action="UpdateVilla" class="btn btn-success"><i
+                    <a asp-controller="Villa" asp-action="UpdateVilla" asp-route-VillaId="@item.Id"
+                       class="btn btn-success"><i
                             class="bi bi-pencil-square"></i></a>
-                    <a asp-controller="Villa" asp-action="DeleteVilla" class="btn btn-danger"><i
-                            class="bi bi-trash-fill"></i></a>
+                    <a asp-controller="Villa" asp-action="DeleteVilla" asp-route-VillaId="@item.Id"
+                       class="btn btn-danger"><i
+                            class="bi bi-trash3"></i></a>
                 </td>
             </tr>
         }
