--- a/MagicVilla_Web/Views/Shared/_Layout.cshtml
+++ b/MagicVilla_Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body data-bs-theme="dark">
+<partial name="_Notification"/>
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-dark box-shadow mb-3">
         <div class="container-fluid">
@@ -51,6 +52,7 @@
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
